--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <h3>Contact Information</h3>
                     <div class="contact-item">
                         <span class="contact-label">Email:</span>
-                        <a href="mailto:contact@fahimbhoraniya.com" class="contact-value">contact@fahimbhoraniya.com</a>
+                        <a href="mailto:fahimbhoraniya40.com" class="contact-value">fahimbhoraniya40.com</a>
                     </div>
                     <div class="contact-item">
                         <span class="contact-label">LinkedIn:</span>
