--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     </div>
                     <div class="contact-item">
                         <span class="contact-label">GitHub:</span>
-                        <a href="https://github.com/fahimbhoraniya" class="contact-value" target="_blank">github.com/fahimbhoraniya</a>
+                        <a href="https://in.linkedin.com/in/fahim-bhoraniya-579b34243" class="contact-value" target="_blank">github.com/fahimbhoraniya</a>
                     </div>
                 </div>
                 <form class="contact-form" id="contact-form">
